--- a/Desktop App/FrmHome/FrmHome.csproj
+++ b/Desktop App/FrmHome/FrmHome.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\Microsoft.EntityFrameworkCore.Design.3.1.22\build\net461\Microsoft.EntityFrameworkCore.Design.props" Condition="Exists('..\packages\Microsoft.EntityFrameworkCore.Design.3.1.22\build\net461\Microsoft.EntityFrameworkCore.Design.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -68,6 +69,9 @@
     </Reference>
     <Reference Include="Microsoft.EntityFrameworkCore.Abstractions, Version=3.1.22.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.EntityFrameworkCore.Abstractions.3.1.22\lib\netstandard2.0\Microsoft.EntityFrameworkCore.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.EntityFrameworkCore.Design, Version=3.1.22.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.EntityFrameworkCore.Design.3.1.22\lib\netstandard2.0\Microsoft.EntityFrameworkCore.Design.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.EntityFrameworkCore.Relational, Version=3.1.22.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.EntityFrameworkCore.Relational.3.1.22\lib\netstandard2.0\Microsoft.EntityFrameworkCore.Relational.dll</HintPath>
@@ -240,12 +244,20 @@
     <Compile Include="Context\ExaminationContext.cs" />
     <Compile Include="Context\ExaminationContext.Functions.cs" />
     <Compile Include="Context\ExaminationContextProcedures.cs" />
+    <Compile Include="CourseTFQ.cs" />
+    <Compile Include="Dept.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dept.Designer.cs">
+      <DependentUpon>Dept.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\answerExamQuestionResult.cs" />
     <Compile Include="Entities\answerExamQuestionV2Result.cs" />
     <Compile Include="Entities\answerExamQuestion_uprotectedResult.cs" />
     <Compile Include="Entities\answerExamResult.cs" />
     <Compile Include="Entities\Assign_Course_to_InstructorResult.cs" />
     <Compile Include="Entities\Course.cs" />
+    <Compile Include="Entities\CourseMCQ.cs" />
     <Compile Include="Entities\Courses_and_Students_of_InstructorResult.cs" />
     <Compile Include="Entities\Course_Attendance.cs" />
     <Compile Include="Entities\deleteExamResult.cs" />
@@ -329,6 +341,30 @@
     <Compile Include="Admin_ManageCourses.Designer.cs">
       <DependentUpon>Admin_ManageCourses.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmNewMCQ.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNewMCQ.Designer.cs">
+      <DependentUpon>frmNewMCQ.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmNewTFQ.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNewTFQ.Designer.cs">
+      <DependentUpon>frmNewTFQ.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ManageQuestions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManageQuestions.Designer.cs">
+      <DependentUpon>ManageQuestions.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NewDept.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewDept.Designer.cs">
+      <DependentUpon>NewDept.cs</DependentUpon>
+    </Compile>
     <Compile Include="Student_UpdateInfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -367,6 +403,21 @@
     <EmbeddedResource Include="Admin_ManageCourses.resx">
       <DependentUpon>Admin_ManageCourses.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Dept.resx">
+      <DependentUpon>Dept.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmNewMCQ.resx">
+      <DependentUpon>frmNewMCQ.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmNewTFQ.resx">
+      <DependentUpon>frmNewTFQ.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ManageQuestions.resx">
+      <DependentUpon>ManageQuestions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewDept.resx">
+      <DependentUpon>NewDept.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Student_UpdateInfo.resx">
       <DependentUpon>Student_UpdateInfo.cs</DependentUpon>
     </EmbeddedResource>
@@ -384,6 +435,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
@@ -410,14 +462,13 @@
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FrmCrystal\FormCrystallRpoer.csproj">
-      <Project>{72216eba-9cc5-4b56-b7a1-ff6525880448}</Project>
-      <Name>FormCrystallRpoer</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Trial\Trial.csproj">
       <Project>{c1e88680-ef50-4481-8c46-5c5835b527e3}</Project>
       <Name>Trial</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\c9cc119b-01d8-416a-8ec6-3409711df3b2-cover%281%29%282%29.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Data.SqlClient.SNI.4.0.0\build\net46\Microsoft.Data.SqlClient.SNI.targets" Condition="Exists('..\packages\Microsoft.Data.SqlClient.SNI.4.0.0\build\net46\Microsoft.Data.SqlClient.SNI.targets')" />
@@ -426,5 +477,6 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.Data.SqlClient.SNI.4.0.0\build\net46\Microsoft.Data.SqlClient.SNI.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Data.SqlClient.SNI.4.0.0\build\net46\Microsoft.Data.SqlClient.SNI.targets'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.EntityFrameworkCore.Design.3.1.22\build\net461\Microsoft.EntityFrameworkCore.Design.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.EntityFrameworkCore.Design.3.1.22\build\net461\Microsoft.EntityFrameworkCore.Design.props'))" />
   </Target>
 </Project>
